tourist_agency_project/src/main/java/com/example/demo/error/CategoryNotFoundException.java
package com.example.demo.error;

public class CategoryNotFoundException extends RuntimeException {
    public CategoryNotFoundException (String message)  {
        super(message);
    }
}
